examples/valid/base64decode.reqlang
```%request
GET https://httpbin.org/base64/SFRUUEJJTiBpcyBhd2Vzb21l HTTP/1.1
```
