examples/invalid/forbidden_header.reqlang
```%request
GET http://example.com HTTP/1.1
transfer-encoding: chunked
```
